aya-assembly/src/parser/instructions/snapshots/aya_assembly__parser__instructions__jmp__tests__jmp_expr.snap
---
source: aya-assembly/src/parser/instructions/jmp.rs
expression: result
---
Instruction(
    Jmp(
        Address(
            BinaryOp {
                lhs: HexLiteral(
                    ByteOffset {
                        start: 7,
                        end: 11,
                    },
                ),
                operator: Add,
                rhs: Register(
                    ByteOffset {
                        start: 14,
                        end: 16,
                    },
                ),
            },
        ),
    ),
)
