aya-assembly/src/parser/instructions/snapshots/aya_assembly__parser__instructions__jmp__tests__jne_lit.snap
---
source: aya-assembly/src/parser/instructions/jmp.rs
expression: result
---
Instruction(
    Jmp(
        Address(
            ByteOffset {
                start: 7,
                end: 11,
            },
        ),
    ),
)
